gcc/testsuite/algol68/compile/error-nestable-comments-1.a68
# { dg-options "-fstropping=upper" } #
# pr UPPER pr  #
BEGIN NOTE This is a
        NOTE nestable ETON comment in brief style.
      ETON
      { Another { comment }.  }
      NOTE invalid { nesting ETON of comments } # { dg-error "" }  #
      SKIP
END
